Add objectFifo bufferization pass (#781)
Introduces new buffer related ops and a pass to bufferize logical
objectFifos. This is part of the effort to move `StatefulTransform`
logic into `AMDAIE` logic:
https://github.com/nod-ai/iree-amd-aie/compare/main...jtuyls:iree-amd-aie:delete-stateful-transform?expand=1.

The newly introduced ops are:

- `amdaie.buffer`: buffer op which will get translated into `aie.buffer`
- `amdaie.lock`: lock op which will get translated into `aie.lock`
- `amdaie.logicalobjectfifo.from_buffers`: logical objectFifo op created
from a set of buffers. Will help with lowering to synchronized DMA
patterns (`aie.mem`, `aie.memtile_dma`), without the need for AIE
objectFifos (`aie.objectfifo`, `aie.objectfifo.link`).

--- a/runtime/src/iree-amd-aie/aie_runtime/Utils/CMakeLists.txt
+++ b/runtime/src/iree-amd-aie/aie_runtime/Utils/CMakeLists.txt
@@ -14,9 +14,12 @@ iree_cc_library(
   HDRS
     "ChannelBdIdGenerator.h"
     "ChannelGenerator.h"
+    "LockIdGenerator.h"
   SRCS
     "ChannelBdIdGenerator.cpp"
+    "LockIdGenerator.cpp"
   DEPS
+    iree-amd-aie::aie_runtime::iree_aie_runtime_static
     LLVMSupport
     MLIRIR
     MLIRParser
