Enable optional packet flow connections between L3 and L2 (#797)
Adds initial e2e support for packet flows via the
`iree-amdaie-enable-packet-flow` flag. This PR only enables it on
connections between L3 and L2 as there is still a hang issue for larger
matmul problems with packet routing between L2 and L1.

This PR includes the fixes from:
https://github.com/Xilinx/mlir-aie/pull/1683

Fixes: #674

--- a/runtime/src/iree-amd-aie/aie_runtime/CMakeLists.txt
+++ b/runtime/src/iree-amd-aie/aie_runtime/CMakeLists.txt
@@ -44,11 +44,13 @@ iree_cc_library(
   NAME
     iree_aie_runtime_static
   HDRS
+    amsel_generator.h
     iree_aie_configure.h
     iree_aie_router.h
     iree_aie_runtime.h
     xaie_hwcfg.h
   SRCS
+    amsel_generator.cc
     iree_aie_configure.cc
     iree_aie_router.cc
     iree_aie_runtime.cc
