--- a/runtime/src/iree-amd-aie/aie_runtime/test/CMakeLists.txt
+++ b/runtime/src/iree-amd-aie/aie_runtime/test/CMakeLists.txt
@@ -106,3 +106,13 @@ iree_lit_test(
   LABELS
     "hostonly"
 )
+
+iree_cc_test(
+  NAME
+    AMSelGeneratorTest
+  SRCS
+    "test_amsel_generator.cc"
+  DEPS
+    gtest
+    iree-amd-aie::aie_runtime::iree_aie_runtime_static
+)
