--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -91,7 +91,6 @@ jobs:
           $env:cache_dir = "${{ env.CACHE_DIR }}"
           $env:CCACHE_COMPILERCHECK = "string:$(clang-cl.exe --version)"
           .\build_tools\build_llvm.ps1
-          ls
           # Remove-Item -Path "$pwd\llvm-build" -Force
           $env:llvm_install_dir = "$pwd\llvm-install"
           echo $env:llvm_install_dir
@@ -139,11 +138,8 @@ jobs:
     name: E2E Test windows
     runs-on: windows-phoenix
     needs: build_and_ctest
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      fail-fast: true
+    env:
+      XILINX_XRT: "C:\\Xilinx\\XRT"
     steps:
       - name: "Checking out repository" # for test scripts
         uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
@@ -158,28 +154,41 @@ jobs:
       - name: Extract artifact
         run: |
           tar -xvf iree-dist-windows.tar
-          bash build_tools/download_peano.sh 
+          Add-Content -Path $env:GITHUB_ENV -Value "IREE_INSTALL_DIR=$PWD\iree-install"
+          Add-Content -Path $env:GITHUB_ENV -Value "PYTHONPATH=$PWD\iree-install\python_packages\iree_compiler;$PWD\iree-install\python_packages\iree_runtime"
+          .\build_tools\download_peano.ps1
+          Add-Content -Path $env:GITHUB_ENV -Value "PEANO_INSTALL_DIR=$PWD\llvm-aie"
 
       - name: Create venv and install dependencies
         run: |
           python -m venv .venv
-          source .venv/Scripts/activate
-          pip install -r build_tools/ci/requirements.txt
+          .\.venv\Scripts\Activate.ps1
+          pip install -r tests\requirements.txt
 
       - name: E2E correctness matmul test
+        shell: bash
         run: |
           source .venv/Scripts/activate
-          export XILINX_XRT=/c/Xilinx/XRT
           bash build_tools/ci/run_matmul_test.sh \
             /c/test_matmuls \
             $PWD/iree-install \
             $PWD/llvm-aie
 
       - name : E2E comparison of AIE to llvm-cpu
+        shell: bash
         run: |
           source .venv/Scripts/activate
-          export XILINX_XRT=/c/Xilinx/XRT
           python build_tools/ci/cpu_comparison/run.py \
             /c/test_aie_vs_cpu \
             $PWD/iree-install \
             $PWD/llvm-aie -v
+
+      - name: Python tests
+        run: |
+          ls $env:XILINX_XRT
+          .\.venv\Scripts\Activate.ps1
+          mkdir temp
+          pytest tests -sv `
+            --basetemp=$PWD\temp `
+            --iree-install-dir="$PWD/iree-install" `
+            --peano-install-dir="$PWD/llvm-aie"
